[gd_scene load_steps=14 format=3 uid="uid://xym4400tru8q"]

[ext_resource type="Texture2D" uid="uid://d36bfyx4w88qr" path="res://diceWhite_border.png" id="1_slmq4"]
[ext_resource type="Script" path="res://dice.gd" id="2_i8t4a"]

[sub_resource type="AtlasTexture" id="AtlasTexture_rx7ls"]
atlas = ExtResource("1_slmq4")
region = Rect2(0, 136, 68, 68)

[sub_resource type="AtlasTexture" id="AtlasTexture_dsv2p"]
atlas = ExtResource("1_slmq4")
region = Rect2(68, 68, 68, 68)

[sub_resource type="AtlasTexture" id="AtlasTexture_mgcyf"]
atlas = ExtResource("1_slmq4")
region = Rect2(68, 0, 68, 68)

[sub_resource type="AtlasTexture" id="AtlasTexture_biw3q"]
atlas = ExtResource("1_slmq4")
region = Rect2(68, 136, 68, 68)

[sub_resource type="AtlasTexture" id="AtlasTexture_t75we"]
atlas = ExtResource("1_slmq4")
region = Rect2(0, 68, 68, 68)

[sub_resource type="AtlasTexture" id="AtlasTexture_ravel"]
atlas = ExtResource("1_slmq4")
region = Rect2(0, 0, 68, 68)

[sub_resource type="SpriteFrames" id="SpriteFrames_1awb4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rx7ls")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dsv2p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mgcyf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_biw3q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t75we")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ravel")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_ppgd2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_kn7t6"]
resource_name = "rolling"
length = 0.1
loop_mode = 1
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"choose_random_side"
}]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.02, 0.05, 0.08, 0.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(-1, -1), Vector2(1, -1), Vector2(-1, 1), Vector2(0, -1), Vector2(-1, -1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_oqija"]
_data = {
"RESET": SubResource("Animation_ppgd2"),
"rolling": SubResource("Animation_kn7t6")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g4cf7"]
size = Vector2(76, 82)

[node name="Dice" type="Node2D" groups=["dices"]]
script = ExtResource("2_i8t4a")

[node name="RollTimer" type="Timer" parent="."]
one_shot = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_1awb4")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_oqija")
}

[node name="LockedLabel" type="Label" parent="."]
offset_left = -50.0
offset_top = 39.0
offset_right = 51.0
offset_bottom = 62.0
horizontal_alignment = 1

[node name="AmmountLabel" type="Label" parent="."]
offset_left = -50.0
offset_top = -81.0
offset_right = 51.0
offset_bottom = -58.0
horizontal_alignment = 1

[node name="MouseDetector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MouseDetector"]
shape = SubResource("RectangleShape2D_g4cf7")

[connection signal="timeout" from="RollTimer" to="." method="_on_roll_timer_timeout"]
[connection signal="input_event" from="MouseDetector" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="MouseDetector" to="." method="_on_mouse_detector_mouse_entered"]
[connection signal="mouse_exited" from="MouseDetector" to="." method="_on_mouse_detector_mouse_exited"]
